获取到传感器的数值

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="xyz.abug.www.intelligentagriculture">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,9 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="xyz.abug.www.activity.SetIPActivity"
-            android:theme="@style/DialogActivity" />
+
+        <service
+            android:name="xyz.abug.www.service.GetJsonServer"
+            android:enabled="true"
+            android:exported="true" />
+
     </application>
 
 </manifest>
