--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="xyz.abug.www.intelligentagriculture">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +27,10 @@
 
         <service
             android:name="xyz.abug.www.service.GetJsonServer"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name="xyz.abug.www.service.GetStatusService"
             android:enabled="true"
             android:exported="true" />
 
