--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,9 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     //gson
     compile 'com.google.code.gson:gson:2.8.1'
+    //snackbar
+    compile 'com.trycatch.android:mysnackbar:1.2.2'
+    //load
+    compile 'com.tuyenmonkey:mkloader:1.3.0'
     testCompile 'junit:junit:4.12'
 }
